// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapDispatchToProps maps the action generators 1`] = `
Object {
  "payload": "name",
  "type": "CreateGroupFlow/SAVE_GROUP_NAME",
}
`;

exports[`mapStateToProps returns the right keys 1`] = `
Object {
  "groupName": "name",
}
`;

exports[`mergeProps merges the props 1`] = `
Object {
  "CreateGroupFlow": Object {
    "groupName": "name",
  },
  "goToCreateGroupUrl": [Function],
  "navigation": Object {
    "navigate": [MockFunction],
  },
}
`;
